# Arch1eNgine_public

./: .gitignore  Application.yaml  Arch1eNgine.sln  CMakeLists.txt  README.md  premake5.lua  premake5_actions.lua  premake5_config.lua  premake5_functions.lua  premake5_log.lua  premake5_options.lua
Application/: Properties.lua  Properties.yaml
Application/Project/Sunspark/: Sunspark.vcxproj  Sunspark.vcxproj.filters
Application/Project/SunsparkUnitTests/: SunsparkUnitTests.vcxproj
Application/Source/: Application.cpp  Application.h  Class.h  Helpers.cpp  Main.cpp  ModuleHandler.cpp
Application/_Backup/Source/: Application.cpp  Class.cpp  Helpers.cpp  Helpers.h  Main.cpp  ModuleHandler.cpp  ModuleHandler.h  stdafx.cpp  stdafx.h
Assets/Models/: Cube.mtl
Assets/Shaders/: hello_glsl.frag  hello_glsl.vert
BuildSystem/: BuildActions.lua  BuildConfiguration.lua  BuildFunctions.lua  BuildOptions.lua  GlobalFunctions.lua  LogSystem.lua  Project_Application.lua  Project_Tests.lua  UserConfigGenerator.lua  UserConfigHandler.lua  premake5_actions.lua  premake5_config.lua  premake5_functions.lua  setup.py
BuildSystem/src/: __main__.py
BuildSystem/src/ProjectFilesBuilder/: BaseBuilder.py  MSVSBuilder.py
Builds/Dependencies/ASSIMP/: revision.h
Dependencies/ASSIMP/: Properties.lua
Dependencies/FreeType/: Properties.lua
Dependencies/GLAD/: Properties.lua
Dependencies/GLAD/src/: glad.c
Dependencies/GLM/: Properties.lua
Dependencies/IMGUI/: Properties.lua
Dependencies/JSON/: Properties.lua
Dependencies/SDL2/: Properties.lua
Dependencies/SDL2/Binaries/: SDL2d.exp  SDL2d.ilk  SDL2d.lib  SDL2maind.lib
Dependencies/STB_Image/: Properties.lua
Dependencies/Vulkan/: Properties.lua
Modules/Benchmark/: Properties.lua
Modules/Benchmark/Source/: BenchmarkTimer.cpp  BenchmarkTimer.h
Modules/Core/: Properties.lua  Properties.yaml
Modules/Core/Source/: Array.h  Color.h  ConfiguratorInterface.h  Delegate.h  Mathematics.inl  UniquePtr.h  Utilities.h  pch.h
Modules/DIFP/: Properties.lua
Modules/Editor/: Properties.lua
Modules/Editor/Source/: Editor.cpp  Editor.h
Modules/Engine/: Properties.lua
Modules/Engine/Source/: Engine.cpp  Engine.h
Modules/EngineEditor/Source/: EngineEditor.cpp  EngineEditor.h
Modules/FileSystem/: Properties.lua
Modules/FileSystem/Source/: ConfigLoader.cpp  ConfigLoader.h  FileSystem.cpp  FileSystem.h  Main.cpp  Paths.cpp  Paths.h  Utilities.cpp
Modules/Geometry/: Properties.lua
Modules/Geometry/Source/: Material.cpp  Material.h  Mesh.cpp  Mesh.h  MeshPlane.cpp  MeshTriangle.cpp
Modules/IO/: Properties.lua
Modules/IO/Source/: ConfigLoader.cpp  ConfigLoader.h  InputLayer.h  Paths.cpp  Paths.h
Modules/Input/: Properties.lua
Modules/Input/Source/: Input.cpp  Input.h  InputHandler.cpp  InputHandler.h  InputLayer.cpp  InputLayer.h
Modules/LUAP/: Properties.lua
Modules/Logger/: Properties.lua
Modules/Logger/Source/: Assertions.h  Assertions.inl  DebugTimer.cpp  DebugTimer.h  LogSystem.h  LogSystemUtilities.h  Logger.cpp  Logger.h  Logger_Vulkan.cpp  Logger_Vulkan.h
Modules/Math/: Properties.lua
Modules/Math/Source/: Color.h  Math.h  Mathematics.inl
Modules/Memory/: Properties.lua
Modules/Multithreading/: Properties.lua
Modules/Networking/: Properties.lua
Modules/Renderer/: Properties.lua
Modules/Renderer.Base/: Properties.lua
Modules/Renderer.Base/Source/: Material.h  Mesh.h  MeshPlane.h  Renderer.cpp  Renderer.h  ShaderProgram.cpp  ShaderProgram.h  Texture.h
Modules/Renderer.OpenGL/: Properties.lua
Modules/Renderer.OpenGL/Source/: AllocatorGPU.cpp  AllocatorGPU.h  Main.cpp  Renderer.OpenGL.cpp  Renderer.OpenGL.h
Modules/Renderer_Base/: Properties.lua
Modules/Renderer_Base/Source/: Material.cpp  Material.h  Mesh.cpp  Mesh.h  MeshPlane.cpp  MeshTriangle.h  Renderer_Base.cpp  Renderer_Base.h  ShaderProgram.cpp  Shaderprogram.h  Texture.cpp  Texture.h
Modules/Renderer_OpenGL/: Properties.lua
Modules/Renderer_OpenGL/Source/: AllocatorGPU.cpp  AllocatorGPU.h  Renderer_OpenGL.cpp  Renderer_OpenGL.h
Modules/Renderer_Vulkan/: Properties.lua
Modules/UI.Editor/: Properties.lua
Modules/UI.Editor/Source/: UI.Editor.cpp  UI.Editor.h  UIEditor.cpp  UIEditor.h
Modules/WUL/: Properties.lua
Modules/WUL/Source/: Array.inl  ConfiguratorInterface.h  Delegate.h  Memory.cpp  Memory.h  Utilities.h
ProjectManagementTool/: setup.py
ProjectManagementTool/src/: CommonFunctions.py  __main__.py
ProjectManagementTool/src/ProjectFilesBuilder/: BaseBuilder.py  MSVSBuilder.py
ProjectManagementTool/src/ProjectGenerator/: BaseProjectGen.py  Utilities.py
Source/: AppMain.cpp  AppMain.h  Helpers.cpp  Helpers.h  Main.cpp  stdafx.h
Source/Actors/: AActor.cpp  AActor.h  ACamera.cpp  ACamera.h  AMeshActor.cpp  AMeshActor.h
Source/Actors/PrimitiveActors/: ACube.cpp  ACube.h  APlane.cpp  APlane.h  ATriangle.cpp  ATriangle.h
Source/Allocators/: AllocatorGPU.cpp
Source/Builders/: ActorBuilder.cpp  ActorBuilder.h  MeshBuilder.cpp  MeshBuilder.h  TextureBuilder.cpp  TextureBuilder.h
Source/Components/: ActorComponent.cpp  ActorComponent.h  BaseComponent.cpp  BaseComponent.h  CameraComponent.cpp  InputComponent.cpp  InputComponent.h  MeshComponent.cpp  MeshComponent.h  MovementComponent.cpp
Source/Core/: ModuleHandler.cpp  ModuleHandler.h
Source/Debuggers/: Assertions.inl  DebugTimer.cpp  DebugTimer.h  Debugger.cpp  Debugger.h
Source/Engine/: Engine.cpp  Engine.h
Source/Engine/Allocators/: AllocatorGPU.cpp  AllocatorGPU.h
Source/Engine/Core/: Class.h  (+1 more)
Source/Factories/: FactoryActor.cpp  FactoryActor.h  FactoryMesh.cpp  FactoryMesh.h  FactoryTexture.cpp  FactoryTexture.h
Source/IO/: ConfigLoader.cpp  ConfigLoader.h  InputLayer.cpp  Paths.cpp  Paths.h
Source/Math/: Color.cpp  Color.h  Math.cpp  Math.h
Source/Mesh/: Mesh.cpp  Mesh.h  MeshBase.cpp  MeshBase.h  MeshCube.cpp  MeshCube.h  MeshPlane.cpp  MeshPlane.h  MeshTriangle.cpp  MeshTriangle.h
Source/Modules/: InputModule.cpp  InputModule.h
Source/Pools/: MaterialObjectPool.h
Source/Rendering/: Renderer.cpp
Tools/CMake/: Properties.lua
(+180 files in other folders)
